2010-07-16	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1617/testing
	* spmountmgr01/init.c, spmountmgr01/spmountmgr01.scn,
	spmountmgr01/spmountmgr01.doc: Added cases to exercise
	mount-mktgt.c.

2010-07-15	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1617/testing
	* spmountmgr01/init.c, spmountmgr01/Makefile.am,
	spmountmgr/.cvsignore, spmountmgr01/spmountmgr01.doc,
	spmountmgr01/spmountmgr01.scn: New test which improves coverage
	of mount-mgr.c under libcsupport.
	* Makefile.am, configure.ac: Changes to accommodate the new test.

2010-07-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spprintk/init.c, spprintk/spprintk.doc, spprintk/spprintk.scn: Clean
	up and add test of getchark().

2010-07-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spfatal21/Makefile.am: Fix typo.

2010-07-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add tests for sbrk fatal error case and
	libio initialization fatal error case.
	* spfatal21/.cvsignore, spfatal21/Makefile.am, spfatal21/spfatal21.doc,
	spfatal21/spfatal21.scn, spfatal21/testcase.h, spfatal22/.cvsignore,
	spfatal22/Makefile.am, spfatal22/spfatal22.doc,
	spfatal22/spfatal22.scn, spfatal22/testcase.h: New files.

2010-07-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spintrcritical06/init.c: Switch semaphore obtain timeouts of
	variants.  Cleanup.
	* spintrcritical05/spintrcritical05.scn,
	spintrcritical06/spintrcritical06.scn,
	spintrcritical07/spintrcritical07.scn,
	spintrcritical11/spintrcritical11.scn,
	spintrcritical12/spintrcritical12.scn,
	spintrcritical13/spintrcritical13.scn,
	spintrcritical14/spintrcritical14.scn: Update.

2010-07-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Readd spfatal09 as a malloc initialization
	fatal error.
	* spfatal09/.cvsignore, spfatal09/Makefile.am, spfatal09/spfatal09.doc,
	spfatal09/spfatal09.scn, spfatal09/testcase.h: New files.

2010-07-07	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1603/testing