@@ -1,0 +1,25 @@
+#
+#  $Id$
+#
+#  COPYRIGHT (c) 1989-2010.
+#  On-Line Applications Research Corporation (OAR).
+#
+#  The license and distribution terms for this file may be
+#  found in the file LICENSE in this distribution or at
+#  http://www.rtems.com/license/LICENSE.
+#
+
+This file describes the directives and concepts tested by this test set.
+
+test set name:  sp72
+
+directives:
+
+  rtems_semaphore_create
+  rtems_semaphore_obtain
+  rtems_task_delete
+
+concepts:
+
++ Block with timeout on a semaphore with priority ordered blocking.
+Delete the task so it has to be extracted.
